update dikit